[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "clickplc"
version = "0.14.0"
license = "GPL-2.0-or-later"
description="Python driver for AutomationDirect (formerly Koyo) Ethernet ClickPLCs."
dependencies = [
  "pymodbus>=3.0.2,<3.13,!=3.10.0",
]
authors = [
  {name = "Pat Fuller", email = "patrickfuller@gmail.com" },
]
maintainers = [
  {name = "Alex Ruddick", email = "alex@ruddick.tech" }
]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)"
]

[project.scripts]
clickplc = "clickplc:command_line"

[project.urls]
Homepage = "https://github.com/alexrudd2/clickplc"
Issues = "https://github.com/alexrudd2/clickplc/issues"

[dependency-groups]
dev = [
  'pytest',
  'pytest-cov',
  'pytest-asyncio>=0.23.8',
  'ruff==0.15.0',
  'types-PyYAML',
  "zuban>=0.3.0",
]

[tool.setuptools]
packages = ["clickplc"]

[tool.ruff]
extend-exclude = ["venv*"]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
ignore = [
  "B005",  # FIXME: lstrip()
  "D104",  # Missing docstring in public package
  "D107",  # Missing docstring in __init__
]
select = [
    "B",   # flake8-bugbear
    "C",   # complexity
    "D",   # docstrings
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "PT",  # flake8-pytest
    "RUF", # ruff base config
    "SIM", # flake-simplify
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
    "YTT", # flake8-2020
    # "ARG", # flake8-unused args
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.format]
quote-style = "preserve"

[tool.mypy]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["pymodbus.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
enableTypeIgnoreComments = true
